# Yggdrasil-ng

./: Cargo.toml  README.md
contrib/: migrate-from-go.sh
contrib/deb/: postinst
crates/ironwood/: Cargo.toml
crates/ironwood/src/: bloom.rs  core.rs  pathfinder.rs  peers.rs  router.rs  traffic.rs
crates/ironwood/src/encrypted/: mod.rs  session.rs
crates/yggdrasil/: Cargo.toml
crates/yggdrasil-mobile/src/: mobile.rs
crates/yggdrasil/src/: ckr.rs  config.rs  config_template.toml  core.rs  firewall.rs  ipv6rwc.rs  lib.rs  links.rs  main.rs  multicast.rs  tls_support.rs  tun.rs  version.rs
