[package]
name = "ironwood"
version = "0.1.4"
edition = "2024"
description = "Routing library: ed25519-addressed PacketConn over spanning tree"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = "4"
crypto_box = "0.9"
murmur3 = "0.5"
rand = "0.8"
bytes = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
sha2 = "0.11.0"
tokio-util = { version = "0.7", features = ["rt"] }
hex = "0.4.3"
rustc-hash = "2.1.2"
