[package]
name = "yggdrasil"
version = "0.1.4"
edition = "2024"
description = "Yggdrasil mesh networking daemon"
license = "MPL-2.0"

[[bin]]
name = "yggdrasil"
path = "src/main.rs"

[lib]
name = "yggdrasil"
path = "src/lib.rs"

[dependencies]
ironwood = { path = "../ironwood" }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
time = { version = "0.3.47", features = ["macros", "local-offset"] }
getopts = "0.2"
toml = "1"
hex = "0.4"
url = "2"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
rcgen = "0.14.7"
glob-match = "0.2"
x509-parser = "0.16"
socket2 = "0.6.3"
getifaddrs = "0.6"

[features]
default = ["ctl", "tun"]
ctl = []
tun = ["dep:tun-rs"]
ckr = ["dep:ipnet", "dep:route_manager"]

[dependencies.ipnet]
version = "2"
optional = true

[dependencies.route_manager]
version = "0.2"
optional = true

[dependencies.tun-rs]
version = "2.8"
features = ["async_tokio"]
optional = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"

[package.metadata.deb]
name = "yggdrasil-ng"
maintainer = "Revertron"
section = "net"
priority = "optional"
depends = "$auto, systemd"
conflicts = "yggdrasil"
conf-files = ["/etc/yggdrasil/yggdrasil.toml"]
maintainer-scripts = "../../contrib/deb"
assets = [
    ["target/release/yggdrasil", "usr/bin/yggdrasil", "755"],
    ["../../contrib/systemd/yggdrasil.service", "lib/systemd/system/yggdrasil.service", "644"],
    ["../../contrib/systemd/yggdrasil.sysusers", "usr/lib/sysusers.d/yggdrasil.conf", "644"],
]
